# TAPIOD

./: .gitignore  CLAUDE.md  README.md  SETUP.md  docker-compose.yml  frontend.py  parse_transcript.py  remove_bg.py  setup.bat  setup.sh  start.bat  start.sh
backend/: .env.example  cache.py  crypto.py  headroom.py  last_tools.json  litellm_config.yaml  main.py  requirements.txt  router.py  routing_config.json
docs/: architecture.md
frontend/: package-lock.json
gateway/: .env  .env.example  arena_prompts.json  cache.py  context.py  cost.py  download_arena_prompts.py  hooks.py  last_tools.json  litellm_config.yaml  memory.py  requirements.txt  router.py  routing_config.json  seed_all.py  seed_arena.py  seed_routing.py  test_cache.py  test_imports.py  test_mf_direct.py  test_route2.py  tool_executor.py  (+1 more)
gateway-dashboard/: package-lock.json  package.json
sdk/: pyproject.toml
sdk/examples/: quickstart.py
sdk/tapiod/: _transport.py  client.py  models.py
sdk/tapiod.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sdk/tapiod/_core/: converters.py  mapping.py
sdk/tapiod/anthropic/: __init__.py  _models.py
sdk/tapiod/google/generativeai/: __init__.py  _models.py
sdk/tapiod/groq/: __init__.py
sdk/tapiod/openai/: __init__.py  _models.py
sdk/tests/: conftest.py  test_anthropic_adapter.py  test_converters.py  test_gemini_adapter.py  test_groq_adapter.py  test_mapping.py  test_native_bugfixes.py  test_openai_adapter.py  test_transport.py
tapiod-sdk/: README.md  pyproject.toml
tapiod-sdk/tapiod/: __init__.py  cli.py  client.py
(+75 files in other folders)
