[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tapiod"
version = "0.2.0"
description = "Universal LLM SDK drop-in — replace OpenAI, Anthropic, Gemini, or Groq with one import line and get caching, routing, and observability for free"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
tapiod = "tapiod.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tapiod*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
