[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tapiod"
version = "0.1.0"
description = "Lightweight client for the TAPIOD LLM gateway — caching, smart routing, memory and observability out of the box"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
tapiod = "tapiod.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tapiod*"]
